api-server/overlays/dev/patchDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  template:
    metadata:
      name: api-server
    spec:
      containers:
        - name: api-server
          image: api-exam:0.0.2
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: config-vol
              mountPath: /etc/config
          resources:
            limits:
              cpu: 500m
              memory: 200M
            requests:
              cpu: 500m
              memory: 200M
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 30
      restartPolicy: Always
      volumes:
        - name: config-vol
          configMap:
            name: api-server-config
