api-server/overlays/dev/patchService.yml
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  ports:
    - name: svc-port
      port: 8081
      targetPort: 8081
  selector:
    app: api-server
  type: ClusterIP
